--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>stPatChecklist</title>
-    <link href="https://fonts.googleapis.com/css2?family=Belanosima:wght@400;600;700&family=Bungee+Shade&family=Matemasie&family=Oregano:ital@0;1&family=Silkscreen:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?display=swap" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Belanosima:wght@400;600;700&family=Bungee+Shade&family=Matemasie&family=Oregano:ital@0;1&family=Silkscreen:wght@400;700&display=swap" rel="stylesheet"> -->
     <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
